--- a/.github/workflows/publish-repo.yml
+++ b/.github/workflows/publish-repo.yml
@@ -3,38 +3,72 @@ name: Publish RPM Repository
 on:
   workflow_dispatch:      # manuell auslösen
   release:
-    types: [published]    # automatisch bei neuem Release
+    types: [published]    # automatisch bei neuem Release → stable
+  push:
+    branches:
+      - testing           # automatisch bei push → testing repo
 
 jobs:
-  build-repo:
+  build-rpm:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Install Podman
+      - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y podman
+          sudo apt-get install -y podman python3
 
-      - name: Download Release RPMs
-        uses: robinraju/release-downloader@v1.9
-        with:
-          latest: true
-          fileName: "*.rpm"
-          out-file-path: "repo"
-
-      - name: Generate repodata inside Fedora container
+      - name: Determine Build Type
+        id: build-type
         run: |
-          podman pull docker.io/library/fedora:40
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "type=stable" >> $GITHUB_OUTPUT
+            echo "path=repo" >> $GITHUB_OUTPUT
+          else
+            echo "type=testing" >> $GITHUB_OUTPUT
+            echo "path=repo/testing" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Modify Spec File for Testing
+        if: steps.build-type.outputs.type == 'testing'
+        run: |
+          sed -i 's/Release:\s*1%/Release: 0.1.testing%/' build/fedora-update.spec
+          echo "Modified spec file for testing build"
+          grep "Release:" build/fedora-update.spec
+
+      - name: Build RPM in Fedora Container
+        run: |
+          mkdir -p rpms
+          podman pull docker.io/library/fedora:latest
           podman run --rm \
             -v $PWD:/workspace \
             -w /workspace \
-            docker.io/library/fedora:40 \
+            docker.io/library/fedora:latest \
+            bash -c "
+              dnf -y install rpm-build rpmdevtools python3-devel pyproject-rpm-macros && \
+              cd /workspace/build && \
+              bash build.sh && \
+              cp ~/rpmbuild/RPMS/noarch/*.rpm /workspace/rpms/ && \
+              cp ~/rpmbuild/SRPMS/*.rpm /workspace/rpms/
+            "
+
+      - name: Create Repository Structure
+        run: |
+          mkdir -p ${{ steps.build-type.outputs.path }}
+          cp rpms/*.rpm ${{ steps.build-type.outputs.path }}/
+
+      - name: Generate Repository Metadata
+        run: |
+          podman run --rm \
+            -v $PWD:/workspace \
+            -w /workspace \
+            docker.io/library/fedora:latest \
             bash -c "
               dnf -y install createrepo_c && \
-              createrepo_c repo
+              createrepo_c ${{ steps.build-type.outputs.path }}
             "
 
       - name: Upload GitHub Pages Artifact
@@ -43,7 +77,7 @@ jobs:
           path: repo
 
   deploy:
-    needs: build-repo
+    needs: build-rpm
     runs-on: ubuntu-latest
     permissions:
       pages: write
