--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,9 +59,9 @@ dev = [
 # Console Scripts (Entry Points)
 # ============================================================================
 [project.scripts]
-fedora-update = "main:main"
-fedora-upgrade = "main:main"
-fuck = "main:main"
+fedora-update = "src.main:main"
+fedora-upgrade = "src.main:main"
+fuck = "src.main:main"
 
 
 # ============================================================================
