add apt package build

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ share/python-wheels/
 MANIFEST
 
 # Build output directories
-build/output/
+output/
 
 # Debian packaging artifacts (generated during build)
 debian/*.debhelper
